[package]
name = "qight"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.30", features = ["full"] } 
uuid = { version = "1.5", features = ["v4"] } 
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"        
anyhow = "1.0"            
tracing = "0.1"             
tracing-subscriber = "0.3" 
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"            
bincode = "1.3"        
futures = "0.3"        
quinn = "0.11.9"


[lib]
name = "qight"
path = "src/lib.rs"

[[bin]]
name = "qight_demo"
path = "src/bin/qight_demo.rs"
