[package]
name = "qight"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.30", features = ["full"] } 
uuid = { version = "1.5", features = ["v4"] } 
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"        
anyhow = "1.0"            
tracing = "0.1"             
tracing-subscriber = "0.3"            
bincode = "1.3"        
futures = "0.3"        
quinn = "0.11.9"
wincode = { version = "0.2.5", features = ["derive"] }
rustls = { version = "0.23.36", default-features = false, features = ["logging", "tls12"] }
quinn-proto = "0.11.13"
webpki-roots = "0.26"
rcgen = "0.14.6"


[lib]
name = "qight"
path = "src/lib.rs"

[[bin]]
name = "qight"
path = "src/bin"
