[package]
name = "qight"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.30", features = ["full"] } 
uuid = { version = "1.5", features = ["v4"] } 
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"        
anyhow = "1.0"            
rusqlite = { version = "0.31.0", features = ["bundled"] }
tracing = "0.1"             
tracing-subscriber = "0.3"            
bincode = "1.3"        
futures = "0.3"        
quinn = "0.11.9"
wincode = { version = "0.2.5", features = ["derive"] }
rustls = { version = "0.23.36", default-features = false, features = ["logging", "tls12"] }
quinn-proto = "0.11.13"
webpki-roots = "0.26"
rcgen = "0.14.6"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
mdns-sd = "0.19.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
hkdf = "0.12.4"
rand = "0.8.4"
sha2 = "0.10.9"

[lib]
name = "qight"
path = "src/lib.rs"

[[bin]]
name = "relay"
path = "src/bin/relay.rs"

[[bin]]
name = "qight_demo"
path = "src/bin/qight_demo.rs"
